objects/MFG_Discrete_Partners_Category_Strategy__c.object
<CustomObject>
    <fields>
        <fullName>Category_Status__c</fullName>
        <label>Category Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Executing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PortfolioSpecification_Rationalization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portfolio/Specification Rationalization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spend_Leverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spend Leverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>CASE(TEXT(Category_Status__c), &quot;In Development&quot;, IMAGE(&quot;https://c.na16.content.force.com/servlet/servlet.FileDownload?file=015Hr000003iKAa&quot;, &quot;In Development&quot;), &quot;Under Review&quot;, IMAGE(&quot;https://c.na16.content.force.com/servlet/servlet.FileDownload?file=015Hr000003iKAb&quot;, &quot;Under Review&quot;), IMAGE(&quot;https://c.na16.content.force.com/servlet/servlet.FileDownload?file=015Hr000003iKAc&quot;, &quot;Executing&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_Summary__c</fullName>
        <label>Strategy Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Supplier_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Management</label>
        <type>Checkbox</type>
    </fields>
    <label>Category Strategy</label>
    <nameField>
        <label>Category Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>